--- a/tehtava/1.md
+++ b/tehtava/1.md
@@ -1,1 +1,3 @@
-lisää ja committaa repositorioon kaksi tiedostoa ja hakemistoa, joiden sisällä on tiedostoja 
+lisää ja committaa repositorioon kaksi tiedostoa ja hakemistoa, joiden sisällä on tiedostoja.
+
+Tiedostoa muutettu.
